--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,45 @@
     transform: rotate(360deg);
   }
 }
+.addTask {
+  height: 30vh;
+  background-color: grey;
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.addTask input{
+  height: 30px;
+  padding-right: 22px;
+}
+.addTask button{
+ 
+  height: 35px;
+  background-color: #61dafb;
+}
+.list{
+  height: auto;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-top: 50px;
+  flex-direction: column;
+}
+
+.task {
+  width:  500px;
+  height:  50px;
+  display:  flex;
+  margin: 15px;
+  display:  flex;
+  align-items: center;
+  justify-content: center;
+}
+.task button{
+  width:  35px;
+  height:  24px;
+  margin-left: 20px;
+  text-align: center;
+  background-color: #61dafb;
+}
